login started, XSS done

--- a/public/restAPI/restAPI.html
+++ b/public/restAPI/restAPI.html
@@ -266,6 +266,6 @@
       <p id="response-message-delete"></p>
     </main>
     <script src="/assets/js/sidebar.js"></script>
-    <script src="restAPI.js"></script>
+    <script type="module" src="restAPI.js"></script>
   </body>
 </html>
