--- a/public/home/home.html
+++ b/public/home/home.html
@@ -1,19 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <link rel="stylesheet" href="../assets/css/stylesheet.css" />
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mandatory I</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="sidebar" id="sidebar"></div>
 
     <main class="content">
-            <h1>Welcome to My Website</h1>
-            <p>Info about the page and it's contents.</p>
+      <hr />
+      <h1>Welcome to my website</h1>
+      <hr />
+      <p>
+        This website is a mandatory assignment for the class Full stack
+        development with Node.js at KEA Computer Science 4th semester.
+        <br />
+        <br />
+        <strong>Purpose of assignment: </strong>
+      </p>
+      <ul>
+        <li>Catalogue of what we've learned so far.</li>
+        <li>Practical implementation of the above.</li>
+      </ul>
+      <br />
+      <p>Both client and serverside is built with Javascript.</p>
+      <ul>
+        <li>Server side with Node.js using Express.</li>
+        <li>Client side of course using HTML and CSS.</li>
+        <li>No database is included in this assignment.</li>
+      </ul>
+      <br />
+      <p>In the navbar you will find the pages with different topics addressed in this assignment.</p>
     </main>
 
     <script src="/assets/js/sidebar.js"></script>
-</body>
+  </body>
 </html>
